--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,65 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary: #2c2c2c;
+  --secondary: #666666;
+  --light: #bdbdbd;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+    transform: translate(0%, 0%);
+  }
+  50% {
+    transform: rotate(180deg);
+    transform: translate(-20%, 0%);
+  }
+  100% {
+    transform: rotate(360deg);
+    transform: translate(-30%, 0%);
+  }
+}
+
+.gradient {
+  --size: 250px;
+  --speed: 10s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 5));
+  background: linear-gradient(
+    rgba(238, 220, 130, 169) 40%,
+    rgba(91, 55, 235, 1) 85%
+  );
+
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+
+  position: absolute;
+  inset: 5%;
+  overflow: hidden;
+  z-index: -999999;
+}
+
+@media (min-width: 720px) {
+  .gradient {
+    --size: 600px;
+    inset: 25% 0 0 50%;
+  }
+
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
