🎨 style(globals.css): add neon theme support and import neon.css file 🔧 chore(tailwind.config.js): add neon theme to darkMode configuration to support neon theme in the app

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import './neon.css';
 
 :root {
   --primary: #2c2c2c;
   --secondary: #666666;
   --light: #bdbdbd;
+}
+
+@layer base {
+  html[data-theme='neon'] {
+    --primary: black;
+    --secondary: rgb(255, 46, 119);
+    --light: #bdbdbd;
+    background-color: red;
+  }
 }
 
 @keyframes rotate {
